--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
     align-items: center;
     gap: 50px;
     padding: 20px;
+    margin-top: 25px;
 }
 
 .input-container {
@@ -47,6 +48,25 @@ body {
     border-radius: 10px;
     position: relative;
     padding-bottom: 60px;
+    gap: 15px
+}
+
+.attendees-head{
+    display: flex;
+    gap: 10px;
+}
+
+.duration {
+    width: 320px;
+    height: 35px;
+    background-color: var(--light-grey);
+    color: var(--dark-grey);
+    border-radius: 4px;
+    border: none;
+    padding: 5px;
+    box-sizing: border-box;
+    gap: 10px;
+    padding: 10px;
 }
 
 .addbtn {
@@ -58,7 +78,27 @@ body {
     background-color: transparent;
 }
 
-.btn {
+.second-row {
+    display: flex;
+    gap: 10px;
+    padding:5px
+}
+
+.second-row input,
+.second-row select {
+    background-color: var(--light-grey);
+    color: var(--dark-grey);
+    height: 35px;
+    line-height: 35px;
+    border-radius: 4px;
+    border: none;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.costbtn {
+    width: 300px;
+    height: 35px;
     background-color: var(--blue);
     color: var(--white);
     font-size: 14px;
@@ -72,36 +112,17 @@ body {
     bottom: 30px;
 }
 
-.attendees-head{
-    display: flex;
-    gap: 10px;
-    padding: 10px;
-}
-
-.duration {
-    background-color: var(--light-grey);
+.results-container {
+    width: 500px; 
+    height: 150px;
+    background-color: var(--white);
     color: var(--dark-grey);
-    height: 30px;
-    border-radius: 4px;
-    border: none;
-    padding: 5px;
-    box-sizing: border-box;
-}
-
-.second-row {
     display: flex;
-    gap: 10px;
-    padding: 10px;
-}
-.second-row input,
-.second-row select {
-    background-color: var(--light-grey);
-    color: var(--dark-grey);
-    height: 35px;
-    line-height: 35px;
-    border-radius: 4px;
-    border: none;
-    padding: 5px;
-    box-sizing: border-box;
-    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+    padding-bottom: 60px;
+    gap: 15px
 }
